[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lork"
version = "0.1.0"
description = "Control plane for AI agents — the Kubernetes of AI workers."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

keywords = [
  "ai",
  "agents",
  "orchestration",
  "infrastructure",
  "llm"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pydantic>=2.5.0",
  "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
]

api = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
]

postgres = [
  "asyncpg>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.0",
]

redis = [
  "redis[hiredis]>=5.0.0",
]

observability = [
  "opentelemetry-api>=1.21.0",
  "opentelemetry-sdk>=1.21.0",
  "prometheus-client>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/LOLA0786/LORK"
Documentation = "https://docs.lork.ai"
Repository = "https://github.com/LOLA0786/LORK"
Issues = "https://github.com/LOLA0786/LORK/issues"

# -------------------------------------------------------------------
# Tool Configuration
# -------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["lork"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
