[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lork"
version = "1.0.0"
description = "Production control plane for AI agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "LORK", email = "eng@lork.ai" }]
keywords = ["ai", "agents", "orchestration", "control-plane", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "celery[redis]>=5.4.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "structlog>=24.2.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "tenacity>=8.3.0",
    "aiofiles>=23.2.1",
    "boto3>=1.34.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.2.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "respx>=0.21.0",
]

[project.scripts]
lork = "lork.cli:app"
lork-server = "lork.control_plane.main:start"
lork-worker = "lork.runtime.worker:start"

[tool.hatch.build.targets.wheel]
packages = ["control_plane", "runtime", "policy", "sdk", "monitoring"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "TCH", "PTH", "ERA"]
ignore = ["S101", "B008", "RET504"]

[tool.ruff.per-file-ignores]
"tests/**" = ["S", "N", "T20"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*", "migrations/*", "scripts/*", "deploy/*"]
